--- a/styles/app.css
+++ b/styles/app.css
@@ -1,3 +1,61 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import "assets.css";
+
+.header {
+    display: flex;
+    border-bottom: 1px solid rgba(181, 180, 186, 0.25);
+    flex: 0 1 auto;
+    background-color: rgb(255, 255, 255);
+    height: 64px;
+    padding: 0 16px;
+    left: 0;
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 100%;
+    z-index: 10;
+}
+
+.turo-logo {
+    display: flex;
+    padding: 16px 0px;
+}
+
+.content {
+    margin-top: 64px;
+    padding: 16px;
+}
+.button {
+    @apply inline-flex items-center px-4 py-2 border text-sm font-medium rounded-md text-gray-700 bg-gray-50 hover:border-blue-300 cursor-pointer;
+}
+
+.primary-button {
+    @apply max-w-xs w-full bg-blue-500 border border-transparent rounded-md py-3 px-8 flex items-center justify-center text-white hover:bg-blue-600 focus:outline-none;
+}
+
+.link {
+    @apply text-sm text-blue-600 hover:text-blue-500;
+}
+
+.footer {
+    display: flex;
+    border-top: 1px solid rgba(181, 180, 186, 0.25);
+    flex: 0 1 auto;
+    background-color: rgb(255, 255, 255);
+    height: 64px;
+    padding: 0 16px;
+    left: 0;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    z-index: 10;
+}
+
+/*
+* asset.css
+*/
+
